--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "homepage": "https://github.com/jcfranco/dev-summit-2021-building-your-own-widget#readme",
   "dependencies": {
-    "@types/arcgis-js-api": "^4.18.0",
     "esri-reveal.js-templates": "git+https://github.com/esri/reveal.js.git",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
+    "@types/arcgis-js-api": "^4.18.0",
     "grunt": "~1.0.4",
     "grunt-sass": "~3.1.0",
     "prettier": "~1.19.1",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   },
   "prettier": {
     "arrowParens": "always",
